--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.4.0",
     "webpack-cli": "^2.0.13",
