--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-object-rest-spread", "dynamic-import-webpack"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
