--- a/package.json
+++ b/package.json
@@ -10,30 +10,26 @@
   "license": "MIT",
   "dependencies": {
     "firebase": "^4.12.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-loadable": "^5.3.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.2.2",
     "react-timeago": "^3.4.3",
-    "react-transition-group": "^2.3.1",
-    "recompose": "^0.27.0",
     "styled-components": "^3.2.5",
     "trashable-react": "^1.0.6"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-dynamic-import-webpack": "^1.0.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^2.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.4.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "workbox-webpack-plugin": "^3.1.0"
+    "prettier": "1.14.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   }
 }
